# aicups

./: .gitignore  README.md  world.md
baseline/c_sharp_client/: strategy.cs
baseline/cpp11_client/: base_strategy.h
baseline/go_client/: Strategy.go
baseline/java1.8_client/: Strategy.java
baseline/nodejs_client/: strategy.js
baseline/php7_client/: base_strategy.php  strategy.php
baseline/purecpp14_client/: strategy.cpp  strategy.h
baseline/python3_client/: base_strategy.py
baseline/swift_client/: Strategy.swift
clients/c_sharp_client/: README.md
clients/c_sharp_client/client/: client.csproj  run.cs
clients/cpp11_client/: README.md
clients/cpp11_client/client/: client.pro  main.cpp
clients/cpp14_client/client/: CMakeLists.txt  compile-g++14.bat  compile-g++14.sh  compile-vscpp.bat
clients/cpp14_client/client/core/: api.h
clients/elixir_client/: README.md  mix.exs
clients/elixir_client/lib/: elixir_client.ex  strategy.ex
clients/elixir_client/priv/: from_cli.json  from_cli.py  from_cli.txt  to_cli.json  to_cli.py  to_cli.txt  tst.py
clients/elixir_client/test/: elixir_client_test.exs
clients/go_client/client/: main.go
clients/java1.8_client/: README.md
clients/java1.8_client/client/: pom.xml
clients/nodejs_client/: README.md
clients/nodejs_client/client/: run.js
clients/php7_client/: README.md
clients/php7_client/client/: run.php
clients/python3_client/: README.md
localrunner/: Dockerfile  README.md  docker-compose.yml
localrunner/visualizer/: index.html
localrunner/world/: requirements.txt  run.py
(+85 files in other folders)
